<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PunsScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/punsbackground"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Pages.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Puns"
        android:textColor="#80ffffff"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/punTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:shadowColor="@color/Black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/showPunButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/homebuttonselector"
        android:elevation="12dp"
        android:onClick="Punsgo"
        android:text="@string/Fun_PunsButton"
        android:textColor="#FFBC47" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>
